--- a/Hotel_Booking_Analysis_EDA.ipynb
+++ b/Hotel_Booking_Analysis_EDA.ipynb
@@ -92,6 +92,7 @@
         "gCX9965dhzqZ",
         "gIfDvo9L0UH2"
       ],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -116,7 +117,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Project Name**    - \n",
+        "# **Project Name**    - Hotel Booking Analysis EDA\n",
         "\n"
       ],
       "metadata": {
@@ -126,12 +127,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##### **Project Type**    - EDA/Regression/Classification/Unsupervised\n",
-        "##### **Contribution**    - Individual/Team\n",
-        "##### **Team Member 1 -**\n",
-        "##### **Team Member 2 -**\n",
-        "##### **Team Member 3 -**\n",
-        "##### **Team Member 4 -**"
+        "##### **Project Type**    - EDA\n",
+        "##### **Contribution**    - Individual (Mohit prajapati)\n"
       ],
       "metadata": {
         "id": "beRrZCGUAJYm"
@@ -149,7 +146,120 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Write the summary here within 500-600 words."
+        "The hotel booking dataset contains information about bookings for a city hotel and a resort hotel, including the booking date, length of stay, number of guests, and parking availability. This data can be used to answer questions about the best time to book a hotel room, the optimal length of stay, and the likelihood of receiving special requests. Personal information has been removed to protect privacy. By analyzing this data, important factors that impact hotel bookings can be discovered.\n",
+        "\n",
+        "**Column information**\n",
+        "\n",
+        "\n",
+        "**Hotel**\n",
+        "*  H1: Resort hotel\n",
+        "\n",
+        "*  H2: City hotel\n",
+        "\n",
+        "**is_canceled**\n",
+        "\n",
+        "*   1: Canceled\n",
+        "*   0: Not canceled\n",
+        "\n",
+        "**lead_time**\n",
+        "\n",
+        "No of days thaat elapsed between entering date of booking into property management system and arrival date\n",
+        "\n",
+        "**arrival_date_year**\n",
+        "\n",
+        "Year of arrival date (2015-2017)\n",
+        "\n",
+        "**arrival_date_month**\n",
+        "\n",
+        "Month of arrival date (Jan - Dec)\n",
+        "\n",
+        "**arrival_date_week_numberr**\n",
+        "\n",
+        "Week number of year for arrival date (1-53)\n",
+        "\n",
+        "**arrival_date_day_of_month**\n",
+        "\n",
+        "Day of arrival date\n",
+        "\n",
+        "**stays_in_weekend_nights**\n",
+        "\n",
+        "No of weekend nights (Sat/Sun) the guest stayed or booked to stay at the hotel\n",
+        "\n",
+        "**stays_in_week_nights**\n",
+        "No of week nights (Mon - Fri) the guest stayed or booked to stay at the hotel\n",
+        "\n",
+        "\n",
+        "**Adults**\n",
+        "**Children**\n",
+        "**Babies**\n",
+        "\n",
+        "**meal**\n",
+        "\n",
+        "Type of meal booked. Undefined/SC – no meal \n",
+        "package; BB – Bed & Breakfast; HB – Half board (breakfast and one other meal – usually dinner); FB – Full board (breakfast, lunch and dinner)\n",
+        "\n",
+        "**country**\n",
+        "\n",
+        "**market_segment** \n",
+        "(a group of people who share one or more common characteristics, lumped together for marketing purposes)\n",
+        "\n",
+        "  \n",
+        "\n",
+        "*   TA: Travel agents\n",
+        "*   TO: Tour operators\n",
+        "\n",
+        "\n",
+        "  \n",
+        "\n",
+        "**distribution_channel **\n",
+        "\n",
+        "(A distribution channel is a chain of businesses or intermediaries through which a good or service passes until it reaches the final buyer or the end consumer)\n",
+        "\n",
+        "\n",
+        "TA: Travel agents\n",
+        "TO: Tour operators\n",
+        "is_repeated_guest (value indicating if the booking name was from repeated guest)\n",
+        "1: Yes\n",
+        "0: No\n",
+        "previous_cancellations\n",
+        "Number of previous bookings that were cancelled by the customer prior to the current booking\n",
+        "previous_bookings_not_canceled\n",
+        "Number of previous bookings not cancelled by the customer prior to the current booking\n",
+        "reserved_room_type\n",
+        "Code of room type reserved. Code is presented instead of designation for anonymity reasons.\n",
+        "assigned_room_type\n",
+        "Code for the type of room assigned to the booking. Sometimes the assigned room type differs from the reserved room type due to hotel operation reasons (e.g. overbooking) or by customer request. Code is presented instead of designation for anonymity reasons.\n",
+        "booking_changes\n",
+        "Number of changes/amendments made to the booking from the moment the booking was entered on the PMS until the moment of check-in or cancellation\n",
+        "deposit_type\n",
+        "Indication on if the customer made a deposit to guarantee the booking. This variable can assume three categories: No Deposit – no deposit was made; Non Refund – a deposit was made in the value of the total stay cost; Refundable – a deposit was made with a value under the total cost of stay.\n",
+        "agent\n",
+        "ID of the travel agency that made the booking\n",
+        "company\n",
+        "ID of the company/entity that made the booking or responsible for paying the booking. ID is presented instead of designation for anonymity reasons\n",
+        "day_in_waiting_list\n",
+        "Number of days the booking was in the waiting list before it was confirmed to the customer\n",
+        "customer_type\n",
+        "Contract - when the booking has an allotment or other type of contract associated to it;\n",
+        "Group – when the booking is associated to a group;\n",
+        "Transient – when the booking is not part of a group or contract, and is not associated to other transient booking;\n",
+        "Transient-party – when the booking is transient, but is associated to at least other transient booking\n",
+        "adr (average daily rate)\n",
+        "average daily rate = \n",
+        " \n",
+        "required_car_parking_spaces\n",
+        "Number of car parking spaces required by the customer\n",
+        "total_of_special_requests\n",
+        "Number of special requests made by the customer (e.g. twin bed or high floor)\n",
+        "reservation_status\n",
+        "Canceled – booking was canceled by the customer;\n",
+        "Check-Out – customer has checked in but already departed;\n",
+        "No-Show – customer did not check-in and did inform the hotel of the reason why\n",
+        "reservation_status_date\n",
+        "Date at which the last status was set. This variable can be used in conjunction with the ReservationStatus to understand when was the booking canceled or when did the customer checked-out of the hotel\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "F6v_1wHtG2nS"
@@ -167,7 +277,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Provide your GitHub Link here."
+        "https://github.com/prajapatimohit/EDA-Hotel_Booking_Analysis.git"
       ],
       "metadata": {
         "id": "h1o69JH3Eqqn"
