--- a/Hotel_Booking_Analysis_EDA.ipynb
+++ b/Hotel_Booking_Analysis_EDA.ipynb
@@ -735,22 +735,13 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "plt.rcParams['figure.figsize'] = 13,13               # Enlarging the pie chart\n",
-        "labels = data['hotel'].value_counts().index.tolist() # Indexing labels. tolist() will convert the index to list for easy manipulation\n",
-        "sizes = data['hotel'].value_counts().tolist()        # Convert value counts to list\n",
-        "explode = (0, 0.1)                                   # As the name suggest, explode will determine how much each section is separated from each other \n",
-        "colors = ['lightskyblue','yellow']\n",
-        "plt.pie(sizes, explode=explode, labels=labels, colors=colors, autopct='%1.1f%%',startangle=90, textprops={'fontsize': 14})\n",
-        "plt.title(\"Percentage comparison of two different hotel\")\n",
-        "                                                    # uses the \"sizes\" variable to indicate the count, and \"explode\" variable to specify the separation between wedges in the pie chart. \n",
-        "                                                    #The \"colors\" variable is used to set the colors of the wedges in the chart. \n",
-        "                                                    #The \"autopct\" parameter uses string formatting to display percentage values, and \".1f%\" rounds the percentage to the nearest tenth. \n",
-        "                                                    #The \"startangle\" parameter specifies the starting angle for the rotation of the chart's wedges, but since there are only two sections in the chart, the start angle is not very relevant. \n",
-        "                                                    #Finally, the \"textprops\" parameter is used to adjust the font size of the text in the chart."
+        "sns.set(style=\"darkgrid\")\n",
+        "sns.countplot(x=\"hotel\", data=data, palette=[\"r\", \"y\"])\n",
+        "plt.title(\"Booking counts for two different hotels\")\n",
+        "plt.show()"
       ],
       "metadata": {
-        "id": "ZTPQ747lqq1d"
+        "id": "oZPU8orCjcYB"
       },
       "execution_count": null,
       "outputs": []
@@ -785,7 +776,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "It seems that a huge proportion of hotels was city hotel. "
+        "It seems that a huge proportion of Bookings belongs to city hotel. "
       ],
       "metadata": {
         "id": "C_j1G7yiqdRP"
@@ -874,7 +865,8 @@
         "# add appropriate labels to the x-axis, y-axis, and the plot title\n",
         "plt.xlabel('Hotel')\n",
         "plt.ylabel('Number of children')\n",
-        "plt.title('Number of children Who Booked Two Different Hotels')"
+        "plt.title('Number of children Who Booked Two Different Hotels')\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "CU38VW8p1F7R"
@@ -949,10 +941,11 @@
     {
       "cell_type": "code",
       "source": [
-        "plt.figure(figsize=(10, 8))\n",
-        "data['is_canceled'] = data.is_canceled.replace([1,0], ['canceled', 'not_canceled'])\n",
-        "canceled_data = data['is_canceled']\n",
-        "sns.countplot(canceled_data)"
+        "sns.set(style=\"whitegrid\")\n",
+        "sns.catplot(x=\"hotel\", kind=\"count\", data=data, hue=\"is_canceled\", palette=[\"r\", \"y\"], height=6, aspect=1.5) #The hue argument sets the color of the bars according to another column, is_canceled in this case.\n",
+        "plt.title(\"Percentage comparison of two different hotels\")                                                   # The palette argument sets the color of each bar.\n",
+        "plt.ylabel(\"Count\")\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "t6GMdE67YoAp"
@@ -972,7 +965,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "A count plot is a suitable chart to visualize the distribution of categorical data. In this case, the categorical variable is \"is_canceled\", which has two possible values - 'canceled' and 'not_canceled'.\n",
+        "A stacked bar  is a suitable chart to visualize the distribution of categorical data. In this case, the categorical variable is \"is_canceled\", which has two possible values - 'canceled' and 'not_canceled'.\n",
         "\n",
         "Here are some reasons why a count plot is a good choice for this kind of visualization:\n",
         "\n",
@@ -1494,156 +1487,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### Chart - 12"
-      ],
-      "metadata": {
-        "id": "n3dbpmDWp1ck"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Chart - 12 visualization code"
-      ],
-      "metadata": {
-        "id": "bwevp1tKp1ck"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 1. Why did you pick the specific chart?"
-      ],
-      "metadata": {
-        "id": "ylSl6qgtp1ck"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "m2xqNkiQp1ck"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 2. What is/are the insight(s) found from the chart?"
-      ],
-      "metadata": {
-        "id": "ZWILFDl5p1ck"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "x-lUsV2mp1ck"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 3. Will the gained insights help creating a positive business impact? \n",
-        "Are there any insights that lead to negative growth? Justify with specific reason."
-      ],
-      "metadata": {
-        "id": "M7G43BXep1ck"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "5wwDJXsLp1cl"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### Chart - 13"
-      ],
-      "metadata": {
-        "id": "Ag9LCva-p1cl"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Chart - 13 visualization code"
-      ],
-      "metadata": {
-        "id": "EUfxeq9-p1cl"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 1. Why did you pick the specific chart?"
-      ],
-      "metadata": {
-        "id": "E6MkPsBcp1cl"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "V22bRsFWp1cl"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 2. What is/are the insight(s) found from the chart?"
-      ],
-      "metadata": {
-        "id": "2cELzS2fp1cl"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "ozQPc2_Ip1cl"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 3. Will the gained insights help creating a positive business impact? \n",
-        "Are there any insights that lead to negative growth? Justify with specific reason."
-      ],
-      "metadata": {
-        "id": "3MPXvC8up1cl"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "GL8l1tdLp1cl"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "#### Chart - 14 - Correlation Heatmap"
       ],
       "metadata": {
@@ -1675,7 +1518,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "A correlation heatmap is a useful tool for exploring the relationships between variables in a dataset, identifying patterns and anomalies, and informing feature selection in predictive modeling."
       ],
       "metadata": {
         "id": "DVPuT8LYZNRQ"
@@ -1693,7 +1536,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "The above heatmap depicts the corelation between various variables of our data set."
       ],
       "metadata": {
         "id": "bfSqtnDqZNRR"
@@ -1711,7 +1554,7 @@
     {
       "cell_type": "code",
       "source": [
-        "sns.pairplot(data,hue='hotel',palette='coolwarm')"
+        "sns.pairplot(data,palette='coolwarm')"
       ],
       "metadata": {
         "id": "o58-TEIhveiU"
@@ -1749,7 +1592,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "A pairplot is a plot that shows the pairwise relationships between variables in a dataset. It is a combination of scatterplots and histograms, where the diagonal shows the distribution of each variable and the off-diagonal plots show the scatterplots of each pair of variables."
       ],
       "metadata": {
         "id": "uPQ8RGwHveiV"
